sync language file changes

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -674,5 +674,7 @@
     "high": "high",
     "General Monitor Type": "General Monitor Type",
     "Passive Monitor Type": "Passive Monitor Type",
-    "Specific Monitor Type": "Specific Monitor Type"
+    "Specific Monitor Type": "Specific Monitor Type",
+    "dataRetentionTimeError": "Retention period must be 0 or greater",
+    "infiniteRetention": "Set to 0 for infinite retention."
 }
