--- a/src/lang/cs-CZ.json
+++ b/src/lang/cs-CZ.json
@@ -591,7 +591,7 @@
     "You can divide numbers with": "Čísla můžete dělit pomocí",
     "or": "nebo",
     "recurringInterval": "Interval",
-    "Recurring": "Recurring",
+    "Recurring": "Opakující se",
     "strategyManual": "Aktivní/Neaktivní Ručně",
     "warningTimezone": "Používá se časové pásmo serveru",
     "weekdayShortMon": "Po",
