sync language changes from upstream

--- a/src/lang/fr-FR.json
+++ b/src/lang/fr-FR.json
@@ -676,5 +676,9 @@
     "Passive Monitor Type": "Type de sonde passive",
     "Specific Monitor Type": "Type de sonde spécifique",
     "dataRetentionTimeError": "La durée de conservation doit être supérieure ou égale à 0",
-    "infiniteRetention": "Définissez la valeur à 0 pour une durée de conservation infinie."
+    "infiniteRetention": "Définissez la valeur à 0 pour une durée de conservation infinie.",
+    "Monitor": "Sonde | Sondes",
+    "Custom": "Personnalisé",
+    "confirmDeleteTagMsg": "Voulez-vous vraiment supprimer cette étiquettes ? Les moniteurs associés ne seront pas supprimés.",
+    "promosmsAllowLongSMS": "Autoriser les longs SMS"
 }
