--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -181,7 +181,7 @@
     "Add New below or Select...": "Add New below or Select...",
     "Tag with this name already exist.": "Tag with this name already exists.",
     "Tag with this value already exist.": "Tag with this value already exists.",
-    "color": "color",
+    "color": "Color",
     "value (optional)": "value (optional)",
     "Gray": "Gray",
     "Red": "Red",
@@ -322,6 +322,7 @@
     "promosmsTypeSpeed": "SMS SPEED - Highest priority in system. Very quick and reliable but costly (about twice of SMS FULL price).",
     "promosmsPhoneNumber": "Phone number (for Polish recipient You can skip area codes)",
     "promosmsSMSSender": "SMS Sender Name : Pre-registred name or one of defaults: InfoSMS, SMS Info, MaxSMS, INFO, SMS",
+    "promosmsAllowLongSMS": "Allow long SMS",
     "Feishu WebHookUrl": "Feishu WebHookURL",
     "matrixHomeserverURL": "Homeserver URL (with http(s):// and optionally port)",
     "Internal Room Id": "Internal Room ID",
