--- a/src/lang/pl.json
+++ b/src/lang/pl.json
@@ -284,6 +284,7 @@
     "promosmsTypeSpeed": "SMS SPEED - wysyłka priorytetowa, ma wszystkie zalety SMS FULL",
     "promosmsPhoneNumber": "Numer odbiorcy",
     "promosmsSMSSender": "Nadawca SMS (wcześniej zatwierdzone nazwy z panelu PromoSMS)",
+    "promosmsAllowLongSMS": "Zezwól na długie SMSy",
     "Primary Base URL": "Główny URL",
     "Push URL": "Push URL",
     "needPushEvery": "Powinieneś wywoływać ten URL co {0} sekund",
