--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -680,5 +680,6 @@
     "Specific Monitor Type": "Specific Monitor Type",
     "dataRetentionTimeError": "Retention period must be 0 or greater",
     "infiniteRetention": "Set to 0 for infinite retention.",
-    "confirmDeleteTagMsg": "Are you sure you want to delete this tag? Monitors associated with this tag will not be deleted."
+    "confirmDeleteTagMsg": "Are you sure you want to delete this tag? Monitors associated with this tag will not be deleted.",
+    "Help": "Help"
 }
