Google Analytics - Moved string to updated file.

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -690,5 +690,6 @@
     "onebotSafetyTips": "For safety, must set access token",
     "PushDeer Key": "PushDeer Key",
     "wayToGetClickSendSMSToken": "You can get API Username and API Key from {0} .",
-    "Custom Monitor Type": "Custom Monitor Type"
+    "Custom Monitor Type": "Custom Monitor Type",
+    "Google Analytics ID": "Google Analytics ID"
 }
