--- a/src/lang/de-CH.json
+++ b/src/lang/de-CH.json
@@ -629,59 +629,5 @@
     "maintenanceStatus-ended": "Ende",
     "maintenanceStatus-unknown": "Unbekannt",
     "Display Timezone": "Zeitzone anzeigen",
-    "Server Timezone": "Server Zeitzone",
-    "statusPageMaintenanceEndDate": "Ende",
-    "Help": "Help",
-    "Game": "Game",
-    "Passive Monitor Type": "Passive Monitor Type",
-    "Specific Monitor Type": "Specific Monitor Type",
-    "Monitor": "Monitor | Monitors",
-    "Custom": "Custom",
-    "webhookAdditionalHeadersTitle": "Additional Headers",
-    "webhookAdditionalHeadersDesc": "Sets additional headers sent with the webhook.",
-    "IconUrl": "Icon URL",
-    "General Monitor Type": "General Monitor Type",
-    "Packet Size": "Packet Size",
-    "ZohoCliq": "ZohoCliq",
-    "Enable DNS Cache": "Enable DNS Cache",
-    "Enable": "Enable",
-    "Disable": "Disable",
-    "dnsCacheDescription": "It may be not working in some IPv6 environments, disable it if you encounter any issues.",
-    "Single Maintenance Window": "Single Maintenance Window",
-    "Maintenance Time Window of a Day": "Maintenance Time Window of a Day",
-    "Effective Date Range": "Effective Date Range",
-    "Schedule Maintenance": "Schedule Maintenance",
-    "Date and Time": "Date and Time",
-    "DateTime Range": "DateTime Range",
-    "dataRetentionTimeError": "Retention period must be 0 or greater",
-    "infiniteRetention": "Set to 0 for infinite retention.",
-    "confirmDeleteTagMsg": "Are you sure you want to delete this tag? Monitors associated with this tag will not be deleted.",
-    "enableGRPCTls": "Allow to send gRPC request with TLS connection",
-    "grpcMethodDescription": "Method name is convert to cammelCase format such as sayHello, check, etc.",
-    "Kook": "Kook",
-    "wayToGetKookBotToken": "Create application and get your bot token at {0}",
-    "wayToGetKookGuildID": "Switch on 'Developer Mode' in Kook setting, and right click the guild to get its ID",
-    "Guild ID": "Guild ID",
-    "Strategy": "Strategy",
-    "Free Mobile User Identifier": "Free Mobile User Identifier",
-    "Free Mobile API Key": "Free Mobile API Key",
-    "Enable TLS": "Enable TLS",
-    "Proto Service Name": "Proto Service Name",
-    "Proto Method": "Proto Method",
-    "Proto Content": "Proto Content",
-    "Economy": "Economy",
-    "Lowcost": "Lowcost",
-    "high": "high",
-    "promosmsAllowLongSMS": "Allow long SMS",
-    "smseagleTo": "Phone number(s)",
-    "smseagleGroup": "Phonebook group name(s)",
-    "smseagleContact": "Phonebook contact name(s)",
-    "smseagleRecipientType": "Recipient type",
-    "smseagleRecipient": "Recipient(s) (multiple must be separated with comma)",
-    "smseagleToken": "API Access token",
-    "smseagleUrl": "Your SMSEagle device URL",
-    "smseagleEncoding": "Send as Unicode",
-    "smseaglePriority": "Message priority (0-9, default = 0)",
-    "wayToGetZohoCliqURL": "You can learn how to create a webhook URL {0}.",
-    "smseagle": "SMSEagle"
+    "Server Timezone": "Server Zeitzone"
 }
