--- a/src/lang/id-ID.json
+++ b/src/lang/id-ID.json
@@ -581,107 +581,5 @@
     "goAlertIntegrationKeyInfo": "Dapatkan kunci integrasi API generik untuk layanan dalam format ini \"aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee\" biasanya nilai parameter token dari URL yang disalin.",
     "goAlert": "GoAlert",
     "backupOutdatedWarning": "Tidak digunakan lagi: Karena banyak fitur ditambahkan dan fitur cadangan ini agak tidak terawat, itu tidak dapat menghasilkan atau memulihkan cadangan lengkap.",
-    "backupRecommend": "Harap cadangkan volume atau folder data (./data/) secara langsung.",
-    "Help": "Help",
-    "Select status pages...": "Select status pages…",
-    "Game": "Game",
-    "Passive Monitor Type": "Passive Monitor Type",
-    "Specific Monitor Type": "Specific Monitor Type",
-    "Monitor": "Monitor | Monitors",
-    "All Status Pages": "All Status Pages",
-    "Custom": "Custom",
-    "webhookAdditionalHeadersTitle": "Additional Headers",
-    "webhookAdditionalHeadersDesc": "Sets additional headers sent with the webhook.",
-    "Packet Size": "Packet Size",
-    "ZohoCliq": "ZohoCliq",
-    "squadcast": "Squadcast",
-    "or": "or",
-    "recurringInterval": "Interval",
-    "Recurring": "Recurring",
-    "strategyManual": "Active/Inactive Manually",
-    "warningTimezone": "It is using the server's timezone",
-    "weekdayShortMon": "Mon",
-    "weekdayShortTue": "Tue",
-    "weekdayShortWed": "Wed",
-    "weekdayShortThu": "Thu",
-    "weekdayShortFri": "Fri",
-    "weekdayShortSat": "Sat",
-    "weekdayShortSun": "Sun",
-    "dayOfWeek": "Day of Week",
-    "dayOfMonth": "Day of Month",
-    "lastDay": "Last Day",
-    "lastDay1": "Last Day of Month",
-    "lastDay2": "2nd Last Day of Month",
-    "lastDay3": "3rd Last Day of Month",
-    "lastDay4": "4th Last Day of Month",
-    "No Maintenance": "No Maintenance",
-    "pauseMaintenanceMsg": "Are you sure want to pause?",
-    "maintenanceStatus-under-maintenance": "Under Maintenance",
-    "maintenanceStatus-inactive": "Inactive",
-    "maintenanceStatus-scheduled": "Scheduled",
-    "maintenanceStatus-ended": "Ended",
-    "maintenanceStatus-unknown": "Unknown",
-    "Display Timezone": "Display Timezone",
-    "Server Timezone": "Server Timezone",
-    "statusPageMaintenanceEndDate": "End",
-    "IconUrl": "Icon URL",
-    "Enable DNS Cache": "Enable DNS Cache",
-    "Enable": "Enable",
-    "Disable": "Disable",
-    "dnsCacheDescription": "It may be not working in some IPv6 environments, disable it if you encounter any issues.",
-    "Single Maintenance Window": "Single Maintenance Window",
-    "Maintenance Time Window of a Day": "Maintenance Time Window of a Day",
-    "Effective Date Range": "Effective Date Range",
-    "Schedule Maintenance": "Schedule Maintenance",
-    "Date and Time": "Date and Time",
-    "DateTime Range": "DateTime Range",
-    "wayToGetZohoCliqURL": "You can learn how to create a webhook URL {0}.",
-    "dataRetentionTimeError": "Retention period must be 0 or greater",
-    "infiniteRetention": "Set to 0 for infinite retention.",
-    "confirmDeleteTagMsg": "Are you sure you want to delete this tag? Monitors associated with this tag will not be deleted.",
-    "deleteMaintenanceMsg": "Are you sure want to delete this maintenance?",
-    "affectedMonitorsDescription": "Select monitors that are affected by current maintenance",
-    "affectedStatusPages": "Show this maintenance message on selected status pages",
-    "atLeastOneMonitor": "Select at least one affected monitor",
-    "wayToGetKookBotToken": "Create application and get your bot token at {0}",
-    "wayToGetKookGuildID": "Switch on 'Developer Mode' in Kook setting, and right click the guild to get its ID",
-    "Guild ID": "Guild ID",
-    "Strategy": "Strategy",
-    "Free Mobile User Identifier": "Free Mobile User Identifier",
-    "Free Mobile API Key": "Free Mobile API Key",
-    "Enable TLS": "Enable TLS",
-    "Proto Service Name": "Proto Service Name",
-    "Proto Method": "Proto Method",
-    "Proto Content": "Proto Content",
-    "Economy": "Economy",
-    "Lowcost": "Lowcost",
-    "high": "high",
-    "SendKey": "SendKey",
-    "SMSManager API Docs": "SMSManager API Docs ",
-    "Gateway Type": "Gateway Type",
-    "SMSManager": "SMSManager",
-    "You can divide numbers with": "You can divide numbers with",
-    "promosmsAllowLongSMS": "Allow long SMS",
-    "smseagle": "SMSEagle",
-    "smseagleTo": "Phone number(s)",
-    "smseagleGroup": "Phonebook group name(s)",
-    "smseagleContact": "Phonebook contact name(s)",
-    "smseagleRecipientType": "Recipient type",
-    "smseagleRecipient": "Recipient(s) (multiple must be separated with comma)",
-    "smseagleToken": "API Access token",
-    "smseagleUrl": "Your SMSEagle device URL",
-    "smseagleEncoding": "Send as Unicode",
-    "smseaglePriority": "Message priority (0-9, default = 0)",
-    "Pick Affected Monitors...": "Pick Affected Monitors…",
-    "enableGRPCTls": "Allow to send gRPC request with TLS connection",
-    "grpcMethodDescription": "Method name is convert to cammelCase format such as sayHello, check, etc.",
-    "Maintenance": "Maintenance",
-    "statusMaintenance": "Maintenance",
-    "Schedule maintenance": "Schedule maintenance",
-    "Affected Monitors": "Affected Monitors",
-    "Start of maintenance": "Start of maintenance",
-    "Kook": "Kook",
-    "Optional": "Optional",
-    "recurringIntervalMessage": "Run once every day | Run once every {0} days",
-    "General Monitor Type": "General Monitor Type"
+    "backupRecommend": "Harap cadangkan volume atau folder data (./data/) secara langsung."
 }
