--- a/src/lang/pl.json
+++ b/src/lang/pl.json
@@ -682,6 +682,5 @@
     "Free Mobile API Key": "Darmowy mobilny klucz API",
     "Lowcost": "Tani",
     "high": "wysoki",
-    "General Monitor Type": "Ogólny typ monitora",
-    "Packet Size": "Packet Size"
+    "General Monitor Type": "Ogólny typ monitora"
 }
