--- a/src/lang/ru-RU.json
+++ b/src/lang/ru-RU.json
@@ -596,100 +596,5 @@
     "resendEveryXTimes": "Повторная отправка каждые {0} раз",
     "resendDisabled": "Повторная отправка отключена",
     "deleteMaintenanceMsg": "Вы действительно хотите удалить это обслуживание?",
-    "ZohoCliq": "ZohoCliq",
-    "critical": "критично",
-    "smseagle": "SMSEagle",
-    "Help": "Help",
-    "Game": "Game",
-    "Resend Notification if Down X times consequently": "Resend Notification if Down X times consequently",
-    "topic": "Topic",
-    "topicExplanation": "MQTT topic to monitor",
-    "successMessage": "Success Message",
-    "successMessageExplanation": "MQTT message that will be considered as success",
-    "Customize": "Customize",
-    "Custom Footer": "Custom Footer",
-    "Custom CSS": "Custom CSS",
-    "Packet Size": "Packet Size",
-    "recurringInterval": "Interval",
-    "Recurring": "Recurring",
-    "strategyManual": "Active/Inactive Manually",
-    "warningTimezone": "It is using the server's timezone",
-    "weekdayShortWed": "Wed",
-    "weekdayShortThu": "Thu",
-    "weekdayShortFri": "Fri",
-    "weekdayShortSat": "Sat",
-    "weekdayShortSun": "Sun",
-    "dayOfWeek": "Day of Week",
-    "dayOfMonth": "Day of Month",
-    "lastDay": "Last Day",
-    "lastDay1": "Last Day of Month",
-    "lastDay2": "2nd Last Day of Month",
-    "lastDay3": "3rd Last Day of Month",
-    "lastDay4": "4th Last Day of Month",
-    "No Maintenance": "No Maintenance",
-    "pauseMaintenanceMsg": "Are you sure want to pause?",
-    "maintenanceStatus-under-maintenance": "Under Maintenance",
-    "maintenanceStatus-inactive": "Inactive",
-    "maintenanceStatus-scheduled": "Scheduled",
-    "maintenanceStatus-ended": "Ended",
-    "maintenanceStatus-unknown": "Unknown",
-    "Display Timezone": "Display Timezone",
-    "Server Timezone": "Server Timezone",
-    "statusPageMaintenanceEndDate": "End",
-    "IconUrl": "Icon URL",
-    "Enable DNS Cache": "Enable DNS Cache",
-    "Enable": "Enable",
-    "Disable": "Disable",
-    "dnsCacheDescription": "It may be not working in some IPv6 environments, disable it if you encounter any issues.",
-    "Single Maintenance Window": "Single Maintenance Window",
-    "Maintenance Time Window of a Day": "Maintenance Time Window of a Day",
-    "Effective Date Range": "Effective Date Range",
-    "Schedule Maintenance": "Schedule Maintenance",
-    "Date and Time": "Date and Time",
-    "DateTime Range": "DateTime Range",
-    "wayToGetZohoCliqURL": "You can learn how to create a webhook URL {0}.",
-    "dataRetentionTimeError": "Retention period must be 0 or greater",
-    "infiniteRetention": "Set to 0 for infinite retention.",
-    "confirmDeleteTagMsg": "Are you sure you want to delete this tag? Monitors associated with this tag will not be deleted.",
-    "wayToGetKookBotToken": "Create application and get your bot token at {0}",
-    "wayToGetKookGuildID": "Switch on 'Developer Mode' in Kook setting, and right click the guild to get its ID",
-    "Strategy": "Strategy",
-    "Free Mobile User Identifier": "Free Mobile User Identifier",
-    "Free Mobile API Key": "Free Mobile API Key",
-    "Enable TLS": "Enable TLS",
-    "Proto Service Name": "Proto Service Name",
-    "Proto Method": "Proto Method",
-    "Proto Content": "Proto Content",
-    "Lowcost": "Lowcost",
-    "high": "high",
-    "promosmsAllowLongSMS": "Allow long SMS",
-    "wayToGetPagerDutyKey": "You can get this by going to Service -> Service Directory -> (Select a service) -> Integrations -> Add integration. Here you can search for \"Events API V2\". More info {0}",
-    "Integration Key": "Integration Key",
-    "Integration URL": "Integration URL",
-    "Auto resolve or acknowledged": "Auto resolve or acknowledged",
-    "do nothing": "do nothing",
-    "auto acknowledged": "auto acknowledged",
-    "auto resolve": "auto resolve",
-    "smseagleTo": "Phone number(s)",
-    "smseagleGroup": "Phonebook group name(s)",
-    "smseagleContact": "Phonebook contact name(s)",
-    "smseagleRecipientType": "Recipient type",
-    "smseagleRecipient": "Recipient(s) (multiple must be separated with comma)",
-    "smseagleToken": "API Access token",
-    "smseagleUrl": "Your SMSEagle device URL",
-    "smseagleEncoding": "Send as Unicode",
-    "smseaglePriority": "Message priority (0-9, default = 0)",
-    "Passive Monitor Type": "Passive Monitor Type",
-    "Specific Monitor Type": "Specific Monitor Type",
-    "Custom": "Custom",
-    "webhookAdditionalHeadersDesc": "Sets additional headers sent with the webhook.",
-    "weekdayShortMon": "Mon",
-    "weekdayShortTue": "Tue",
-    "Kook": "Kook",
-    "Guild ID": "Guild ID",
-    "Economy": "Economy",
-    "Pick Affected Monitors...": "Pick Affected Monitors…",
-    "enableGRPCTls": "Allow to send gRPC request with TLS connection",
-    "grpcMethodDescription": "Method name is convert to cammelCase format such as sayHello, check, etc.",
-    "General Monitor Type": "General Monitor Type"
+    "critical": "критично"
 }
