--- a/src/lang/de-DE.json
+++ b/src/lang/de-DE.json
@@ -643,45 +643,5 @@
     "Custom": "Benutzerdefiniert",
     "Enable DNS Cache": "DNS Cache aktivieren",
     "Enable": "Aktivieren",
-    "Disable": "Deaktivieren",
-    "Passive Monitor Type": "Passive Monitor Type",
-    "Specific Monitor Type": "Specific Monitor Type",
-    "Monitor": "Monitor | Monitors",
-    "webhookAdditionalHeadersTitle": "Additional Headers",
-    "webhookAdditionalHeadersDesc": "Sets additional headers sent with the webhook.",
-    "General Monitor Type": "General Monitor Type",
-    "Packet Size": "Packet Size",
-    "ZohoCliq": "ZohoCliq",
-    "IconUrl": "Icon URL",
-    "dnsCacheDescription": "It may be not working in some IPv6 environments, disable it if you encounter any issues.",
-    "wayToGetZohoCliqURL": "You can learn how to create a webhook URL {0}.",
-    "dataRetentionTimeError": "Retention period must be 0 or greater",
-    "confirmDeleteTagMsg": "Are you sure you want to delete this tag? Monitors associated with this tag will not be deleted.",
-    "enableGRPCTls": "Allow to send gRPC request with TLS connection",
-    "grpcMethodDescription": "Method name is convert to cammelCase format such as sayHello, check, etc.",
-    "Kook": "Kook",
-    "wayToGetKookBotToken": "Create application and get your bot token at {0}",
-    "wayToGetKookGuildID": "Switch on 'Developer Mode' in Kook setting, and right click the guild to get its ID",
-    "Guild ID": "Guild ID",
-    "Free Mobile User Identifier": "Free Mobile User Identifier",
-    "Enable TLS": "Enable TLS",
-    "Proto Service Name": "Proto Service Name",
-    "Proto Method": "Proto Method",
-    "Proto Content": "Proto Content",
-    "Economy": "Economy",
-    "Lowcost": "Lowcost",
-    "high": "high",
-    "promosmsAllowLongSMS": "Allow long SMS",
-    "smseagle": "SMSEagle",
-    "smseagleTo": "Phone number(s)",
-    "smseagleGroup": "Phonebook group name(s)",
-    "smseagleContact": "Phonebook contact name(s)",
-    "smseagleRecipientType": "Recipient type",
-    "smseagleRecipient": "Recipient(s) (multiple must be separated with comma)",
-    "smseagleToken": "API Access token",
-    "smseagleUrl": "Your SMSEagle device URL",
-    "smseagleEncoding": "Send as Unicode",
-    "smseaglePriority": "Message priority (0-9, default = 0)",
-    "infiniteRetention": "Set to 0 for infinite retention.",
-    "Free Mobile API Key": "Free Mobile API Key"
+    "Disable": "Deaktivieren"
 }
