--- a/src/lang/nl-NL.json
+++ b/src/lang/nl-NL.json
@@ -527,162 +527,5 @@
     "ntfy Topic": "ntfy Topic",
     "Domain": "Domein",
     "Workstation": "Werkstation",
-    "disableCloudflaredNoAuthMsg": "De \"Geen authenticatie\" modus staat aan, wachtwoord is niet vereist.",
-    "Help": "Help",
-    "Pick Affected Monitors...": "Pick Affected Monitors…",
-    "Game": "Game",
-    "statusMaintenance": "Maintenance",
-    "Maintenance": "Maintenance",
-    "Passive Monitor Type": "Passive Monitor Type",
-    "Specific Monitor Type": "Specific Monitor Type",
-    "Monitor": "Monitor | Monitors",
-    "Resend Notification if Down X times consequently": "Resend Notification if Down X times consequently",
-    "Affected Monitors": "Affected Monitors",
-    "Start of maintenance": "Start of maintenance",
-    "All Status Pages": "All Status Pages",
-    "Custom": "Custom",
-    "Select status pages...": "Select status pages…",
-    "webhookAdditionalHeadersTitle": "Additional Headers",
-    "webhookAdditionalHeadersDesc": "Sets additional headers sent with the webhook.",
-    "HTTP Headers": "HTTP Headers",
-    "Trust Proxy": "Trust Proxy",
-    "Domain Name Expiry Notification": "Domain Name Expiry Notification",
-    "RadiusCallingStationIdDescription": "Identifier of the calling device",
-    "API Username": "API Username",
-    "API Key": "API Key",
-    "Setup Docker Host": "Setup Docker Host",
-    "Connection Type": "Connection Type",
-    "Docker Daemon": "Docker Daemon",
-    "deleteDockerHostMsg": "Are you sure want to delete this docker host for all monitors?",
-    "socket": "Socket",
-    "tcp": "TCP / HTTP",
-    "Docker Container": "Docker Container",
-    "Container Name / ID": "Container Name / ID",
-    "Docker Host": "Docker Host",
-    "Docker Hosts": "Docker Hosts",
-    "Packet Size": "Packet Size",
-    "ZohoCliq": "ZohoCliq",
-    "trustProxyDescription": "Trust 'X-Forwarded-*' headers. If you want to get the correct client IP and your Uptime Kuma is behind such as Nginx or Apache, you should enable this.",
-    "wayToGetLineNotifyToken": "You can get an access token from {0}",
-    "Home Assistant URL": "Home Assistant URL",
-    "Long-Lived Access Token": "Long-Lived Access Token",
-    "Long-Lived Access Token can be created by clicking on your profile name (bottom left) and scrolling to the bottom then click Create Token. ": "Long-Lived Access Token can be created by clicking on your profile name (bottom left) and scrolling to the bottom then click Create Token. ",
-    "Notification Service": "Notification Service",
-    "default: notify all devices": "default: notify all devices",
-    "A list of Notification Services can be found in Home Assistant under \"Developer Tools > Services\" search for \"notification\" to find your device/phone name.": "A list of Notification Services can be found in Home Assistant under \"Developer Tools > Services\" search for \"notification\" to find your device/phone name.",
-    "Automations can optionally be triggered in Home Assistant:": "Automations can optionally be triggered in Home Assistant:",
-    "Trigger type:": "Trigger type:",
-    "Event type:": "Event type:",
-    "Event data:": "Event data:",
-    "Then choose an action, for example switch the scene to where an RGB light is red.": "Then choose an action, for example switch the scene to where an RGB light is red.",
-    "Frontend Version": "Frontend Version",
-    "Frontend Version do not match backend version!": "Frontend Version do not match backend version!",
-    "backupOutdatedWarning": "Deprecated: Since a lot of features added and this backup feature is a bit unmaintained, it cannot generate or restore a complete backup.",
-    "backupRecommend": "Please backup the volume or the data folder (./data/) directly instead.",
-    "Optional": "Optional",
-    "squadcast": "Squadcast",
-    "recurringInterval": "Interval",
-    "Recurring": "Recurring",
-    "strategyManual": "Active/Inactive Manually",
-    "warningTimezone": "It is using the server's timezone",
-    "weekdayShortMon": "Mon",
-    "weekdayShortTue": "Tue",
-    "weekdayShortWed": "Wed",
-    "weekdayShortThu": "Thu",
-    "weekdayShortFri": "Fri",
-    "weekdayShortSat": "Sat",
-    "weekdayShortSun": "Sun",
-    "dayOfWeek": "Day of Week",
-    "dayOfMonth": "Day of Month",
-    "lastDay": "Last Day",
-    "lastDay1": "Last Day of Month",
-    "lastDay2": "2nd Last Day of Month",
-    "lastDay3": "3rd Last Day of Month",
-    "lastDay4": "4th Last Day of Month",
-    "No Maintenance": "No Maintenance",
-    "pauseMaintenanceMsg": "Are you sure want to pause?",
-    "maintenanceStatus-inactive": "Inactive",
-    "maintenanceStatus-scheduled": "Scheduled",
-    "maintenanceStatus-ended": "Ended",
-    "maintenanceStatus-unknown": "Unknown",
-    "Display Timezone": "Display Timezone",
-    "Server Timezone": "Server Timezone",
-    "statusPageMaintenanceEndDate": "End",
-    "IconUrl": "Icon URL",
-    "Enable DNS Cache": "Enable DNS Cache",
-    "Enable": "Enable",
-    "Disable": "Disable",
-    "dnsCacheDescription": "It may be not working in some IPv6 environments, disable it if you encounter any issues.",
-    "Single Maintenance Window": "Single Maintenance Window",
-    "Effective Date Range": "Effective Date Range",
-    "Schedule Maintenance": "Schedule Maintenance",
-    "Date and Time": "Date and Time",
-    "DateTime Range": "DateTime Range",
-    "wayToGetZohoCliqURL": "You can learn how to create a webhook URL {0}.",
-    "dataRetentionTimeError": "Retention period must be 0 or greater",
-    "infiniteRetention": "Set to 0 for infinite retention.",
-    "confirmDeleteTagMsg": "Are you sure you want to delete this tag? Monitors associated with this tag will not be deleted.",
-    "enableGRPCTls": "Allow to send gRPC request with TLS connection",
-    "grpcMethodDescription": "Method name is convert to cammelCase format such as sayHello, check, etc.",
-    "deleteMaintenanceMsg": "Are you sure want to delete this maintenance?",
-    "recurringIntervalMessage": "Run once every day | Run once every {0} days",
-    "affectedMonitorsDescription": "Select monitors that are affected by current maintenance",
-    "affectedStatusPages": "Show this maintenance message on selected status pages",
-    "atLeastOneMonitor": "Select at least one affected monitor",
-    "octopushAPIKey": "\"API key\" from HTTP API credentials in control panel",
-    "octopushLogin": "\"Login\" from HTTP API credentials in control panel",
-    "promosmsLogin": "API Login Name",
-    "promosmsPassword": "API Password",
-    "wayToGetKookBotToken": "Create application and get your bot token at {0}",
-    "wayToGetKookGuildID": "Switch on 'Developer Mode' in Kook setting, and right click the guild to get its ID",
-    "Strategy": "Strategy",
-    "Free Mobile User Identifier": "Free Mobile User Identifier",
-    "Free Mobile API Key": "Free Mobile API Key",
-    "Enable TLS": "Enable TLS",
-    "Proto Service Name": "Proto Service Name",
-    "Proto Method": "Proto Method",
-    "Proto Content": "Proto Content",
-    "Economy": "Economy",
-    "Lowcost": "Lowcost",
-    "high": "high",
-    "SendKey": "SendKey",
-    "SMSManager API Docs": "SMSManager API Docs ",
-    "Gateway Type": "Gateway Type",
-    "SMSManager": "SMSManager",
-    "You can divide numbers with": "You can divide numbers with",
-    "Base URL": "Base URL",
-    "goAlertInfo": "GoAlert is a An open source application for on-call scheduling, automated escalations and notifications (like SMS or voice calls). Automatically engage the right person, the right way, and at the right time! {0}",
-    "goAlertIntegrationKeyInfo": "Get generic API integration key for the service in this format \"aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee\" usually the value of token parameter of copied URL.",
-    "goAlert": "GoAlert",
-    "Bark Group": "Bark Group",
-    "Bark Sound": "Bark Sound",
-    "promosmsAllowLongSMS": "Allow long SMS",
-    "smseagle": "SMSEagle",
-    "smseagleTo": "Phone number(s)",
-    "smseagleGroup": "Phonebook group name(s)",
-    "smseagleContact": "Phonebook contact name(s)",
-    "smseagleRecipientType": "Recipient type",
-    "smseagleRecipient": "Recipient(s) (multiple must be separated with comma)",
-    "smseagleToken": "API Access token",
-    "smseagleUrl": "Your SMSEagle device URL",
-    "smseagleEncoding": "Send as Unicode",
-    "smseaglePriority": "Message priority (0-9, default = 0)",
-    "Octopush API Version": "Octopush API Version",
-    "Legacy Octopush-DM": "Legacy Octopush-DM",
-    "HomeAssistant": "Home Assistant",
-    "Schedule maintenance": "Schedule maintenance",
-    "RadiusSecret": "Radius Secret",
-    "RadiusSecretDescription": "Shared Secret between client and server",
-    "RadiusCalledStationId": "Called Station Id",
-    "RadiusCalledStationIdDescription": "Identifier of the called device",
-    "RadiusCallingStationId": "Calling Station Id",
-    "Examples": "Examples",
-    "maintenanceStatus-under-maintenance": "Under Maintenance",
-    "or": "or",
-    "Maintenance Time Window of a Day": "Maintenance Time Window of a Day",
-    "Kook": "Kook",
-    "Guild ID": "Guild ID",
-    "resendEveryXTimes": "Resend every {0} times",
-    "resendDisabled": "Resend disabled",
-    "General Monitor Type": "General Monitor Type"
+    "disableCloudflaredNoAuthMsg": "De \"Geen authenticatie\" modus staat aan, wachtwoord is niet vereist."
 }
