--- a/src/lang/sl-SI.json
+++ b/src/lang/sl-SI.json
@@ -352,336 +352,5 @@
     "serwersmsAPIUser": "API uporabniško ime (vključno z webapi_ prefix)",
     "serwersmsAPIPassword": "API geslo",
     "serwersmsPhoneNumber": "Telefonska številka",
-    "serwersmsSenderName": "Ime SMS pošiljatelja (registrirani prek portala za stranke)",
-    "stackfield": "Stackfield",
-    "GoogleChat": "Google Chat (Google Workspace only)",
-    "You can divide numbers with": "You can divide numbers with",
-    "Base URL": "Base URL",
-    "goAlert": "GoAlert",
-    "smtpDkimSettings": "DKIM Settings",
-    "dnsPortDescription": "DNS server port. Defaults to 53. You can change the port at any time.",
-    "recurringIntervalMessage": "Run once every day | Run once every {0} days",
-    "affectedMonitorsDescription": "Select monitors that are affected by current maintenance",
-    "affectedStatusPages": "Show this maintenance message on selected status pages",
-    "atLeastOneMonitor": "Select at least one affected monitor",
-    "Help": "Help",
-    "endpoint": "endpoint",
-    "octopushAPIKey": "\"API key\" from HTTP API credentials in control panel",
-    "octopushLogin": "\"Login\" from HTTP API credentials in control panel",
-    "promosmsLogin": "API Login Name",
-    "promosmsPassword": "API Password",
-    "pushoversounds pushover": "Pushover (default)",
-    "pushoversounds bike": "Bike",
-    "pushoversounds bugle": "Bugle",
-    "pushoversounds cashregister": "Cash Register",
-    "pushoversounds classical": "Classical",
-    "pushoversounds cosmic": "Cosmic",
-    "pushoversounds falling": "Falling",
-    "pushoversounds gamelan": "Gamelan",
-    "pushoversounds incoming": "Incoming",
-    "pushoversounds intermission": "Intermission",
-    "pushoversounds magic": "Magic",
-    "pushoversounds mechanical": "Mechanical",
-    "pushoversounds pianobar": "Piano Bar",
-    "pushoversounds siren": "Siren",
-    "pushoversounds spacealarm": "Space Alarm",
-    "pushoversounds tugboat": "Tug Boat",
-    "pushoversounds alien": "Alien Alarm (long)",
-    "pushoversounds climb": "Climb (long)",
-    "pushoversounds persistent": "Persistent (long)",
-    "pushoversounds echo": "Pushover Echo (long)",
-    "pushoversounds updown": "Up Down (long)",
-    "pushoversounds vibrate": "Vibrate Only",
-    "pushoversounds none": "None (silent)",
-    "pushyAPIKey": "Secret API Key",
-    "pushyToken": "Device token",
-    "PushByTechulus": "Push by Techulus",
-    "Kook": "Kook",
-    "wayToGetKookBotToken": "Create application and get your bot token at {0}",
-    "wayToGetKookGuildID": "Switch on 'Developer Mode' in Kook setting, and right click the guild to get its ID",
-    "Guild ID": "Guild ID",
-    "Strategy": "Strategy",
-    "Free Mobile User Identifier": "Free Mobile User Identifier",
-    "Free Mobile API Key": "Free Mobile API Key",
-    "Enable TLS": "Enable TLS",
-    "Proto Service Name": "Proto Service Name",
-    "Proto Method": "Proto Method",
-    "Proto Content": "Proto Content",
-    "Economy": "Economy",
-    "Lowcost": "Lowcost",
-    "high": "high",
-    "SendKey": "SendKey",
-    "SMSManager API Docs": "SMSManager API Docs ",
-    "Gateway Type": "Gateway Type",
-    "SMSManager": "SMSManager",
-    "goAlertInfo": "GoAlert is a An open source application for on-call scheduling, automated escalations and notifications (like SMS or voice calls). Automatically engage the right person, the right way, and at the right time! {0}",
-    "goAlertIntegrationKeyInfo": "Get generic API integration key for the service in this format \"aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee\" usually the value of token parameter of copied URL.",
-    "AccessKeyId": "AccessKey ID",
-    "SecretAccessKey": "AccessKey Secret",
-    "PhoneNumbers": "PhoneNumbers",
-    "TemplateCode": "TemplateCode",
-    "SignName": "SignName",
-    "Sms template must contain parameters: ": "Sms template must contain parameters: ",
-    "Bark Endpoint": "Bark Endpoint",
-    "Bark Group": "Bark Group",
-    "Bark Sound": "Bark Sound",
-    "WebHookUrl": "WebHookUrl",
-    "SecretKey": "SecretKey",
-    "For safety, must use secret key": "For safety, must use secret key",
-    "Device Token": "Device Token",
-    "Platform": "Platform",
-    "iOS": "iOS",
-    "Android": "Android",
-    "Huawei": "Huawei",
-    "High": "High",
-    "Retry": "Retry",
-    "Topic": "Topic",
-    "WeCom Bot Key": "WeCom Bot Key",
-    "Setup Proxy": "Setup Proxy",
-    "Proxy Protocol": "Proxy Protocol",
-    "Proxy Server": "Proxy Server",
-    "Proxy server has authentication": "Proxy server has authentication",
-    "promosmsAllowLongSMS": "Allow long SMS",
-    "smtpDkimDesc": "Please refer to the Nodemailer DKIM {0} for usage.",
-    "documentation": "documentation",
-    "smtpDkimDomain": "Domain Name",
-    "smtpDkimKeySelector": "Key Selector",
-    "smtpDkimPrivateKey": "Private Key",
-    "smtpDkimHashAlgo": "Hash Algorithm (Optional)",
-    "smtpDkimheaderFieldNames": "Header Keys to sign (Optional)",
-    "smtpDkimskipFields": "Header Keys not to sign (Optional)",
-    "wayToGetPagerDutyKey": "You can get this by going to Service -> Service Directory -> (Select a service) -> Integrations -> Add integration. Here you can search for \"Events API V2\". More info {0}",
-    "Integration Key": "Integration Key",
-    "Integration URL": "Integration URL",
-    "Auto resolve or acknowledged": "Auto resolve or acknowledged",
-    "do nothing": "do nothing",
-    "auto acknowledged": "auto acknowledged",
-    "auto resolve": "auto resolve",
-    "gorush": "Gorush",
-    "alerta": "Alerta",
-    "alertaApiEndpoint": "API Endpoint",
-    "alertaEnvironment": "Environment",
-    "alertaApiKey": "API Key",
-    "alertaAlertState": "Alert State",
-    "alertaRecoverState": "Recover State",
-    "smseagle": "SMSEagle",
-    "smseagleTo": "Phone number(s)",
-    "smseagleGroup": "Phonebook group name(s)",
-    "smseagleContact": "Phonebook contact name(s)",
-    "smseagleRecipientType": "Recipient type",
-    "smseagleRecipient": "Recipient(s) (multiple must be separated with comma)",
-    "smseagleToken": "API Access token",
-    "smseagleUrl": "Your SMSEagle device URL",
-    "smseagleEncoding": "Send as Unicode",
-    "smseaglePriority": "Message priority (0-9, default = 0)",
-    "Recipient Number": "Recipient Number",
-    "From Name/Number": "From Name/Number",
-    "Leave blank to use a shared sender number.": "Leave blank to use a shared sender number.",
-    "Octopush API Version": "Octopush API Version",
-    "Legacy Octopush-DM": "Legacy Octopush-DM",
-    "ntfy Topic": "ntfy Topic",
-    "HomeAssistant": "Home Assistant",
-    "onebotHttpAddress": "OneBot HTTP Address",
-    "onebotMessageType": "OneBot Message Type",
-    "onebotGroupMessage": "Group",
-    "onebotPrivateMessage": "Private",
-    "onebotUserOrGroupId": "Group/User ID",
-    "onebotSafetyTips": "For safety, must set access token",
-    "PushDeer Key": "PushDeer Key",
-    "wayToGetClickSendSMSToken": "You can get API Username and API Key from {0} .",
-    "Select status pages...": "Select status pages…",
-    "Game": "Game",
-    "General Monitor Type": "General Monitor Type",
-    "Passive Monitor Type": "Passive Monitor Type",
-    "Specific Monitor Type": "Specific Monitor Type",
-    "Monitor": "Monitor | Monitors",
-    "Resend Notification if Down X times consequently": "Resend Notification if Down X times consequently",
-    "Start of maintenance": "Start of maintenance",
-    "All Status Pages": "All Status Pages",
-    "Custom": "Custom",
-    "webhookAdditionalHeadersTitle": "Additional Headers",
-    "webhookAdditionalHeadersDesc": "Sets additional headers sent with the webhook.",
-    "topic": "Topic",
-    "topicExplanation": "MQTT topic to monitor",
-    "successMessage": "Success Message",
-    "successMessageExplanation": "MQTT message that will be considered as success",
-    "error": "error",
-    "critical": "critical",
-    "Customize": "Customize",
-    "Custom Footer": "Custom Footer",
-    "Custom CSS": "Custom CSS",
-    "deleteStatusPageMsg": "Are you sure want to delete this status page?",
-    "Proxies": "Proxies",
-    "default": "Default",
-    "enabled": "Enabled",
-    "setAsDefault": "Set As Default",
-    "deleteProxyMsg": "Are you sure want to delete this proxy for all monitors?",
-    "proxyDescription": "Proxies must be assigned to a monitor to function.",
-    "enableProxyDescription": "This proxy will not effect on monitor requests until it is activated. You can control temporarily disable the proxy from all monitors by activation status.",
-    "setAsDefaultProxyDescription": "This proxy will be enabled by default for new monitors. You can still disable the proxy separately for each monitor.",
-    "Certificate Chain": "Certificate Chain",
-    "Valid": "Valid",
-    "Invalid": "Invalid",
-    "User": "User",
-    "Installed": "Installed",
-    "Not installed": "Not installed",
-    "Running": "Running",
-    "Not running": "Not running",
-    "Remove Token": "Remove Token",
-    "Start": "Start",
-    "Stop": "Stop",
-    "Uptime Kuma": "Uptime Kuma",
-    "Add New Status Page": "Add New Status Page",
-    "Slug": "Slug",
-    "Accept characters:": "Accept characters:",
-    "startOrEndWithOnly": "Start or end with {0} only",
-    "No consecutive dashes": "No consecutive dashes",
-    "Next": "Next",
-    "The slug is already taken. Please choose another slug.": "The slug is already taken. Please choose another slug.",
-    "No Proxy": "No Proxy",
-    "Authentication": "Authentication",
-    "HTTP Basic Auth": "HTTP Basic Auth",
-    "New Status Page": "New Status Page",
-    "Page Not Found": "Page Not Found",
-    "Reverse Proxy": "Reverse Proxy",
-    "Backup": "Backup",
-    "About": "About",
-    "wayToGetCloudflaredURL": "(Download cloudflared from {0})",
-    "cloudflareWebsite": "Cloudflare Website",
-    "Message:": "Message:",
-    "Don't know how to get the token? Please read the guide:": "Don't know how to get the token? Please read the guide:",
-    "The current connection may be lost if you are currently connecting via Cloudflare Tunnel. Are you sure want to stop it? Type your current password to confirm it.": "The current connection may be lost if you are currently connecting via Cloudflare Tunnel. Are you sure want to stop it? Type your current password to confirm it.",
-    "HTTP Headers": "HTTP Headers",
-    "Trust Proxy": "Trust Proxy",
-    "Other Software": "Other Software",
-    "For example: nginx, Apache and Traefik.": "For example: nginx, Apache and Traefik.",
-    "Please read": "Please read",
-    "Subject:": "Subject:",
-    "Valid To:": "Valid To:",
-    "Days Remaining:": "Days Remaining:",
-    "Issuer:": "Issuer:",
-    "Fingerprint:": "Fingerprint:",
-    "No status pages": "No status pages",
-    "Domain Name Expiry Notification": "Domain Name Expiry Notification",
-    "Proxy": "Proxy",
-    "Date Created": "Date Created",
-    "Footer Text": "Footer Text",
-    "Show Powered By": "Show Powered By",
-    "Domain Names": "Domain Names",
-    "signedInDisp": "Signed in as {0}",
-    "signedInDispDisabled": "Auth Disabled.",
-    "RadiusSecret": "Radius Secret",
-    "RadiusSecretDescription": "Shared Secret between client and server",
-    "RadiusCalledStationId": "Called Station Id",
-    "RadiusCalledStationIdDescription": "Identifier of the called device",
-    "RadiusCallingStationId": "Calling Station Id",
-    "RadiusCallingStationIdDescription": "Identifier of the calling device",
-    "Certificate Expiry Notification": "Certificate Expiry Notification",
-    "API Username": "API Username",
-    "API Key": "API Key",
-    "Show update if available": "Show update if available",
-    "Also check beta release": "Also check beta release",
-    "Using a Reverse Proxy?": "Using a Reverse Proxy?",
-    "Check how to config it for WebSocket": "Check how to config it for WebSocket",
-    "Steam Game Server": "Steam Game Server",
-    "Most likely causes:": "Most likely causes:",
-    "The resource is no longer available.": "The resource is no longer available.",
-    "There might be a typing error in the address.": "There might be a typing error in the address.",
-    "What you can try:": "What you can try:",
-    "Retype the address.": "Retype the address.",
-    "Go back to the previous page.": "Go back to the previous page.",
-    "Coming Soon": "Coming Soon",
-    "Connection String": "Connection String",
-    "Query": "Query",
-    "settingsCertificateExpiry": "TLS Certificate Expiry",
-    "certificationExpiryDescription": "HTTPS Monitors trigger notification when TLS certificate expires in:",
-    "Setup Docker Host": "Setup Docker Host",
-    "Connection Type": "Connection Type",
-    "Docker Daemon": "Docker Daemon",
-    "deleteDockerHostMsg": "Are you sure want to delete this docker host for all monitors?",
-    "socket": "Socket",
-    "tcp": "TCP / HTTP",
-    "Docker Container": "Docker Container",
-    "Container Name / ID": "Container Name / ID",
-    "Docker Host": "Docker Host",
-    "Docker Hosts": "Docker Hosts",
-    "Domain": "Domain",
-    "Workstation": "Workstation",
-    "IconUrl": "Icon URL",
-    "Packet Size": "Packet Size",
-    "ZohoCliq": "ZohoCliq",
-    "disableCloudflaredNoAuthMsg": "You are in No Auth mode, a password is not required.",
-    "trustProxyDescription": "Trust 'X-Forwarded-*' headers. If you want to get the correct client IP and your Uptime Kuma is behind such as Nginx or Apache, you should enable this.",
-    "wayToGetLineNotifyToken": "You can get an access token from {0}",
-    "Examples": "Examples",
-    "Home Assistant URL": "Home Assistant URL",
-    "Long-Lived Access Token": "Long-Lived Access Token",
-    "Long-Lived Access Token can be created by clicking on your profile name (bottom left) and scrolling to the bottom then click Create Token. ": "Long-Lived Access Token can be created by clicking on your profile name (bottom left) and scrolling to the bottom then click Create Token. ",
-    "Notification Service": "Notification Service",
-    "default: notify all devices": "default: notify all devices",
-    "A list of Notification Services can be found in Home Assistant under \"Developer Tools > Services\" search for \"notification\" to find your device/phone name.": "A list of Notification Services can be found in Home Assistant under \"Developer Tools > Services\" search for \"notification\" to find your device/phone name.",
-    "Automations can optionally be triggered in Home Assistant:": "Automations can optionally be triggered in Home Assistant:",
-    "Trigger type:": "Trigger type:",
-    "Event type:": "Event type:",
-    "Event data:": "Event data:",
-    "Then choose an action, for example switch the scene to where an RGB light is red.": "Then choose an action, for example switch the scene to where an RGB light is red.",
-    "Frontend Version": "Frontend Version",
-    "Frontend Version do not match backend version!": "Frontend Version do not match backend version!",
-    "backupOutdatedWarning": "Deprecated: Since a lot of features added and this backup feature is a bit unmaintained, it cannot generate or restore a complete backup.",
-    "backupRecommend": "Please backup the volume or the data folder (./data/) directly instead.",
-    "Optional": "Optional",
-    "squadcast": "Squadcast",
-    "recurringInterval": "Interval",
-    "Recurring": "Recurring",
-    "strategyManual": "Active/Inactive Manually",
-    "warningTimezone": "It is using the server's timezone",
-    "weekdayShortMon": "Mon",
-    "weekdayShortTue": "Tue",
-    "weekdayShortWed": "Wed",
-    "weekdayShortThu": "Thu",
-    "weekdayShortFri": "Fri",
-    "weekdayShortSat": "Sat",
-    "weekdayShortSun": "Sun",
-    "dayOfWeek": "Day of Week",
-    "dayOfMonth": "Day of Month",
-    "lastDay": "Last Day",
-    "lastDay1": "Last Day of Month",
-    "lastDay2": "2nd Last Day of Month",
-    "lastDay3": "3rd Last Day of Month",
-    "lastDay4": "4th Last Day of Month",
-    "No Maintenance": "No Maintenance",
-    "pauseMaintenanceMsg": "Are you sure want to pause?",
-    "maintenanceStatus-under-maintenance": "Under Maintenance",
-    "maintenanceStatus-inactive": "Inactive",
-    "maintenanceStatus-scheduled": "Scheduled",
-    "maintenanceStatus-ended": "Ended",
-    "maintenanceStatus-unknown": "Unknown",
-    "Display Timezone": "Display Timezone",
-    "Server Timezone": "Server Timezone",
-    "statusPageMaintenanceEndDate": "End",
-    "Enable DNS Cache": "Enable DNS Cache",
-    "Enable": "Enable",
-    "Disable": "Disable",
-    "dnsCacheDescription": "It may be not working in some IPv6 environments, disable it if you encounter any issues.",
-    "Single Maintenance Window": "Single Maintenance Window",
-    "Maintenance Time Window of a Day": "Maintenance Time Window of a Day",
-    "Effective Date Range": "Effective Date Range",
-    "Schedule Maintenance": "Schedule Maintenance",
-    "Date and Time": "Date and Time",
-    "DateTime Range": "DateTime Range",
-    "wayToGetZohoCliqURL": "You can learn how to create a webhook URL {0}.",
-    "dataRetentionTimeError": "Retention period must be 0 or greater",
-    "infiniteRetention": "Set to 0 for infinite retention.",
-    "confirmDeleteTagMsg": "Are you sure you want to delete this tag? Monitors associated with this tag will not be deleted.",
-    "deleteMaintenanceMsg": "Are you sure want to delete this maintenance?",
-    "Pick Affected Monitors...": "Pick Affected Monitors…",
-    "resendEveryXTimes": "Resend every {0} times",
-    "resendDisabled": "Resend disabled",
-    "enableGRPCTls": "Allow to send gRPC request with TLS connection",
-    "grpcMethodDescription": "Method name is convert to cammelCase format such as sayHello, check, etc.",
-    "Maintenance": "Maintenance",
-    "statusMaintenance": "Maintenance",
-    "Schedule maintenance": "Schedule maintenance",
-    "Affected Monitors": "Affected Monitors",
-    "or": "or"
+    "serwersmsSenderName": "Ime SMS pošiljatelja (registrirani prek portala za stranke)"
 }
