--- a/src/lang/tr-TR.json
+++ b/src/lang/tr-TR.json
@@ -234,7 +234,6 @@
     "Application Token": "Uygulama Tokeni",
     "Server URL": "Sunucu URL",
     "Priority": "Öncelik",
-    "slack": "Slack",
     "Icon Emoji": "İkon Emoji",
     "Channel Name": "Kanal Adı",
     "Uptime Kuma URL": "Uptime Kuma URL",
@@ -242,19 +241,10 @@
     "aboutChannelName": "Webhook kanalını atlamak istiyorsanız, {0} Kanal Adı alanına kanal adını girin. Ör: #diğer-kanal",
     "aboutKumaURL": "Uptime Kuma URL alanını boş bırakırsanız, varsayılan olarak Project GitHub sayfası olur.",
     "emojiCheatSheet": "Emoji cheat sheet: {0}",
-    "rocket.chat": "Rocket.Chat",
-    "pushover": "Pushover",
-    "pushy": "Pushy",
     "PushByTechulus": "Push by Techulus",
-    "octopush": "Octopush",
-    "promosms": "PromoSMS",
-    "clicksendsms": "ClickSend SMS",
-    "lunasea": "LunaSea",
     "apprise": "Apprise (50'den fazla Bildirim hizmetini destekler)",
     "GoogleChat": "Google Chat (sadece Google Workspace)",
     "pushbullet": "Pushbullet",
-    "line": "Line Messenger",
-    "mattermost": "Mattermost",
     "User Key": "Kullancı Anahtarı",
     "Device": "Cihaz",
     "Message Title": "Mesaj Başlığı",
@@ -681,7 +671,5 @@
     "dataRetentionTimeError": "Saklama süresi 0 veya daha büyük olmalıdır",
     "confirmDeleteTagMsg": "Bu etiketi silmek istediğinizden emin misiniz? Bu etiketle ilişkili monitörler silinmez.",
     "promosmsAllowLongSMS": "Uzun SMS'e izin ver",
-    "infiniteRetention": "Sonsuza dek saklamak için 0 giriniz.",
-    "Game": "Game",
-    "Packet Size": "Packet Size"
+    "infiniteRetention": "Sonsuza dek saklamak için 0 giriniz."
 }
