--- a/src/lang/zh-CN.json
+++ b/src/lang/zh-CN.json
@@ -687,6 +687,5 @@
     "confirmDeleteTagMsg": "你确定你要删除这个标签？与此标签关联的监视器不会被删除。",
     "infiniteRetention": "设为0表示无限保留期。",
     "Help": "帮助",
-    "Game": "游戏",
-    "Packet Size": "Packet Size"
+    "Game": "游戏"
 }
