--- a/src/lang/fa.json
+++ b/src/lang/fa.json
@@ -187,5 +187,5 @@
     "One record": "یک مورد",
     "Info": "اطلاعات",
     "Powered by": "نیرو گرفته از",
-    "apprise": "Apprise (Support 50+ Notification services)",
+    "apprise": "Apprise (Support 50+ Notification services)"
 }
