feat: add ability to group monitors in dashboard

--- a/src/lang/de-DE.json
+++ b/src/lang/de-DE.json
@@ -643,5 +643,7 @@
     "Custom": "Benutzerdefiniert",
     "Enable DNS Cache": "DNS Cache aktivieren",
     "Enable": "Aktivieren",
-    "Disable": "Deaktivieren"
+    "Disable": "Deaktivieren",
+	"Group": "Gruppe",
+	"Monitor Group": "Monitor Gruppe"
 }
