--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -682,5 +682,7 @@
     "onebotUserOrGroupId": "Group/User ID",
     "onebotSafetyTips": "For safety, must set access token",
     "PushDeer Key": "PushDeer Key",
-    "wayToGetClickSendSMSToken": "You can get API Username and API Key from {0} ."
+    "wayToGetClickSendSMSToken": "You can get API Username and API Key from {0} .",
+	"Group": "Group",
+	"Monitor Group": "Monitor Group"
 }
