Dummy commit for build

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -691,5 +691,5 @@
     "PushDeer Key": "PushDeer Key",
     "wayToGetClickSendSMSToken": "You can get API Username and API Key from {0} .",
     "Custom Monitor Type": "Custom Monitor Type",
-    "Body Encoding": "Body Encoding"
+    "Body Encoding": "Body Encoding",
 }
