--- a/src/lang/es-ES.json
+++ b/src/lang/es-ES.json
@@ -304,7 +304,7 @@
     "General Monitor Type": "Monitor Tipo General",
     "Specific Monitor Type": "Monitor Tipo Específico",
     "Monitor": "Monitores",
-    "Resend Notification if Down X times consequently": "Reenviar Notificación si Caído X veces consecutivas",
+    "Resend Notification if Down X times consecutively": "Reenviar Notificación si Caído X veces consecutivas",
     "resendEveryXTimes": "Reenviar cada {0} veces",
     "resendDisabled": "Reenvío deshabilitado",
     "needPushEvery": "Debe llamar a esta URL cada {0} segundos.",
