Fixed logic errors, removed dev leftovers
Fixed a logic error where a comma was used instead of an or, also
removed leftover console.logs from testing.

Date picker is now dissabled when don't expire is checked.

Signed-off-by: Matthew Nickson <mnickson@sidingsmedia.com>

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -711,5 +711,6 @@
     "apiKey-inactive": "Inactive",
     "Expires": "Expires",
     "disableAPIKeyMsg": "Are you sure you want to disable this API key?",
-    "deleteAPIKeyMsg": "Are you sure you want to delete this API key?"
+    "deleteAPIKeyMsg": "Are you sure you want to delete this API key?",
+    "Generate": "Generate"
 }
